<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="@dimen/dim8dp"
    android:orientation="vertical"
    tools:context=".Organization.MainOrganizationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="@dimen/dim4dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Approve Data"
            android:textSize="@dimen/dim16sp"
            android:padding="@dimen/dim2dp"
            android:gravity="center_horizontal"
            android:background="@color/primary_text"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tvNoList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Empty Approve Data"
            android:textSize="@dimen/dim18sp"
            android:visibility="visible"
            android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:weightSum="3"
        >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:weightSum="3">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="@color/colorPrimary"
               android:orientation="vertical"
               android:gravity="center"
               android:layout_weight="1">
               <Button
                   android:id="@+id/btnSize"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:background="@color/primary_text"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                   android:text="Size"
                   android:textAllCaps="false"
                   android:textSize="@dimen/dim16sp"
                   android:gravity="center"/>

           </LinearLayout>
           <View
               android:layout_width="@dimen/dim1dp"
               android:layout_height="wrap_content"
               android:background="@color/white"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="@color/colorPrimary"
               android:orientation="vertical"
               android:gravity="center"
               android:layout_weight="1">
               <Button
                   android:id="@+id/btnResume"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:background="@color/primary_text"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                   android:text="Resume"
                   android:textAllCaps="false"
                   android:textSize="@dimen/dim16sp"
                   android:gravity="center"/>

           </LinearLayout>
           <View
               android:layout_width="@dimen/dim1dp"
               android:layout_height="wrap_content"
               android:background="@color/white"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="@color/colorPrimary"
               android:orientation="vertical"
               android:gravity="center"
               android:layout_weight="1">
               <Button
                   android:id="@+id/btnStop"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:background="@color/primary_text"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                   android:text="Stop"
                   android:textAllCaps="false"
                   android:textSize="@dimen/dim16sp"
                   android:gravity="center"/>

           </LinearLayout>
       </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim1dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                     android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="@string/request"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
            <View
                android:layout_width="@dimen/dim1dp"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnFind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                     android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="@string/find_user"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
            <View
                android:layout_width="@dimen/dim1dp"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="@string/reset_plotter"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim1dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnAbort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                     android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="Abort"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
            <View
                android:layout_width="@dimen/dim1dp"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                     android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="Empty"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
            <View
                android:layout_width="@dimen/dim1dp"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnLogoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_text"
                     android:textColor="@color/white"
                    android:layout_margin="@dimen/dim8dp"
                   android:padding="@dimen/dim2dp"
                    android:text="Logoff"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim16sp"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim1dp"
            android:background="@color/white"/>
    </LinearLayout>
</LinearLayout>